# nanocraft

./: .clang-format  .gitignore  CMakeLists.txt
include/: ButtonWidget.hpp  Chunk.hpp  Game.hpp  GameState.hpp  Generator.hpp  ImageWidget.hpp  InputHandler.hpp  MainMenu.hpp  MainMenuState.hpp  Map.hpp  Object.hpp  OverworldGenerator.hpp  Physics.hpp  PlayerComponent.hpp  PlayerInputComponent.hpp  PlayingState.hpp  TextureAtlas.hpp  Tile.hpp  UI.hpp  VelocityComponent.hpp  Version.hpp.in  Widget.hpp
include/Components/: AnimationComponent.hpp  CollisionBoxComponent.hpp  InventoryComponent.hpp  PlayerComponent.hpp  PlayerInputComponent.hpp  VelocityComponent.hpp
include/Game/: Game.hpp  GameRegistry.hpp  GameState.hpp  Item.hpp  ItemStack.hpp  MainMenuState.hpp  PlayingState.hpp
include/General/: InputHandler.hpp  Object.hpp  Physics.hpp  TextureAtlas.hpp  Version.hpp.in
include/UI/: ButtonWidget.hpp  ImageWidget.hpp  MainMenu.hpp  PlayerInventory.hpp  PlayerUI.hpp  UI.hpp  Widget.hpp
include/World/: Chunk.hpp  Generator.hpp  Map.hpp  OverworldGenerator.hpp  Tile.hpp
res/data/base/items/: grass.json
res/data/base/tiles/: grass.json  sand.json
src/: ButtonWidget.cpp  CMakeLists.txt  Chunk.cpp  Game.cpp  GameState.cpp  Generator.cpp  ImageWidget.cpp  InputHandler.cpp  MainMenu.cpp  MainMenuState.cpp  Map.cpp  Object.cpp  OverworldGenerator.cpp  Physics.cpp  PlayingState.cpp  TextureAtlas.cpp  Tile.cpp  UI.cpp  Widget.cpp  main.cpp
src/Components/: AnimationComponent.cpp  InventoryComponent.cpp
src/Game/: Game.cpp  GameRegistry.cpp  GameState.cpp  Item.cpp  ItemStack.cpp  MainMenuState.cpp  PlayingState.cpp
src/General/: InputHandler.cpp  Object.cpp  Physics.cpp  TextureAtlas.cpp  main.cpp
src/UI/: ButtonWidget.cpp  ImageWidget.cpp  MainMenu.cpp  PlayerInventory.cpp  PlayerUI.cpp  UI.cpp  Widget.cpp
src/World/: Chunk.cpp  Generator.cpp  Map.cpp  OverworldGenerator.cpp  Tile.cpp
